<resources>
    <string name="app_name">Tidy Day</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_goal">Adding your goals</string>
    <string name="title_activity_add_memo">Adding your memos</string>
    <string name="goal_title">Your Goals title</string>
    <string name="goal_sub_title">Status of your goal</string>
    <string name="delete_card">Delete</string>
    <string name="edit_card">Edit</string>
    <string name="add_goal_bt">Add goal</string>
    <string name="add_memo_bt">Add memo</string>

    <string name="save">Save</string>

    <string name="hint_adding_goal">Enter your goal here …</string>
    <string name="goal_s_type">Goal\'s Type</string>
    <string name="goal_type_good">Get Good</string>
    <string name="goal_type_bad">Quit Bad</string>
    <string name="goal_type_reminder">Onetime Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="addnote">Add note</string>

    <string-array name="goal_repeat_array">
        <item> Daily </item>
        <item> Weekly </item>
        <item> Monthly </item>
        <item> Annually </item>
    </string-array>

    <string name="hint_adding_memo">Enter your moment here …</string>
    <string name="memo_s_type">This moment</string>
    <string name="memo_type_time">Memory of times</string>
    <string name="memo_type_word">Memory of words</string>
    <string name="date">Date of the memory</string>

    <string-array name="goals_title">
        <item> Work out </item>
        <item> Quit somke </item>
    </string-array>

    <string-array name="goals_status">
        <item> You are doing good! </item>
        <item> You are getting there! </item>
    </string-array>

    <string-array name="memos_title">
        <item> Your Count down </item>
        <item> Your Anniversary </item>
        <item> Your Essay </item>>
    </string-array>

    <string-array name="memos_detial">
        <item> 5 days to go! </item>
        <item> It has been a year! </item>
        <item> Serotonin! </item>>
    </string-array>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="morning">Morning</string>
    <string name="night">Night</string>
    <string name="noon">Noon</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="on_the_same_day_each_month">On the same day each month</string>
    <string name="on_every_forth_sunday">On every forth Sunday</string>
    <string name="every">Every</string>
    <string name="year">year on</string>
    <string name="_1">1</string>
    <string name="select_a_different_time">Select a different time</string>
    <string name="urgent">Urgent</string>
    <string name="important">Important</string>
    <string name="normal">Normal</string>
    <string name="priority">Priority</string>
    <string name="notification_time">Notification Time</string>
    <string name="those_words">Those words</string>
    <string name="here_goes">Here goes …</string>
    <string name="on_selected_days_at">On selected days at</string>


</resources>
