<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.czeng.tidyday.add_goal_memo.add_goal_">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/app_bar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/goal_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_s_type"
                android:textColor="@color/colorGoal"
                android:textSize="@dimen/text_edit_size" />

            <RadioGroup
                android:id="@+id/radio_goal_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/goal_type_good" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goal_type_bad" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goal_type_reminder" />
            </RadioGroup>

            <TextView
                android:id="@+id/goal_repeat_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/repeat"
                android:textColor="@color/colorGoal"
                android:textSize="@dimen/text_edit_size" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_edit_margin"
                android:entries="@array/goal_repeat_array" />

            <TextView
                android:id="@+id/goal_add_note_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorGoal"
                android:textSize="@dimen/text_edit_size"
                android:text="@string/addnote" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
>

                <EditText
                    android:id="@+id/goal_add_note__et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_edit_size" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/colorGoal"
        android:fitsSystemWindows="true"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/close_goal_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/activity_horizontal_margin"
                            android:clickable="true"
                            android:onClick="Close"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:src="@drawable/ic_close" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <TextView
                            android:id="@+id/save_goal_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/activity_horizontal_margin"
                            android:clickable="true"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:text="@string/save"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_margin" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/goal_title_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="bottom"
                        android:hint="@string/hint_adding_goal"
                        android:inputType="text|textCapWords|textAutoCorrect"
                        android:textColor="@android:color/white"
                        android:textCursorDrawable="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
