<android.support.v7.widget.CardView android:id="@+id/single_card"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    android:layout_marginBottom="@dimen/card_margin_half"
    android:layout_marginTop="@dimen/card_margin_half"
    cardView:cardCornerRadius="@dimen/card_radius"
    cardView:cardElevation="@dimen/card_elevation"
    cardView:cardBackgroundColor="@color/colorWhite"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/tidy_day"
            android:id="@+id/image_in_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/card_title_margin"
            android:layout_marginTop="@dimen/card_title_margin_top"/>

        <TextView
            android:id="@+id/card_tittle"
            android:text="@string/goal_title"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/image_in_card"
            android:layout_marginEnd="@dimen/card_title_margin"
            android:layout_marginStart="@dimen/card_title_margin"
            android:layout_marginTop="@dimen/card_title_margin_top"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/card_sub_tittle"
            android:text="@string/goal_sub_title"
            android:layout_below="@+id/card_tittle"
            android:layout_toRightOf="@+id/image_in_card"
            android:layout_marginEnd="@dimen/card_subtitle_margin"
            android:layout_marginStart="@dimen/card_subtitle_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/edit_card"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_sub_tittle"
            android:layout_toRightOf="@+id/image_in_card"
            android:text="@string/edit_card"
            android:gravity="center_vertical"
            android:textColor="@color/colorMemoLight"
            android:layout_marginLeft="@dimen/card_button_margin"
            android:layout_marginRight="@dimen/card_button_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:layout_alignBottom="@+id/delete_card" />

        <Button
            android:id="@+id/delete_card"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_sub_tittle"
            android:layout_toRightOf="@+id/image_in_card"
            android:layout_marginBottom="@dimen/card_button_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:layout_toEndOf="@id/edit_card"
            android:text="@string/delete_card"
            android:gravity="center_vertical"
            android:textColor="@color/colorMemoLight" />
    </RelativeLayout>

</android.support.v7.widget.CardView>