<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.czeng.tidyday.add_goal_memo.add_goal_">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/colorMemo"
        android:fitsSystemWindows="true"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:clickable="true"
                            android:id="@+id/close_memo_button"
                            android:src="@drawable/ic_close"
                            android:layout_margin="@dimen/activity_horizontal_margin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="Close"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">
                        <TextView
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:clickable="true"
                            android:id="@+id/save_memo_button"
                            android:text="@string/save"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_margin"
                            android:layout_margin="@dimen/activity_horizontal_margin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="SaveAndClose_MEMO"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <EditText
                        android:gravity="bottom"
                        android:id="@+id/memo_title_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text|textCapWords|textAutoCorrect"
                        android:textColor="@android:color/white"
                        android:textCursorDrawable="@android:color/white"
                        android:hint="@string/hint_adding_memo"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/app_bar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="0dp">

            <TextView
            android:id="@+id/memo_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo_s_type"
            android:textColor="@color/colorMemo"
            android:textSize="@dimen/text_edit_size" />

            <RadioGroup
                android:id="@+id/radio_memo_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="MemoTypeSelected"
                    android:text="@string/memo_type_time" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="MemoTypeSelected"
                    android:text="@string/memo_type_word" />
            </RadioGroup>

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/memory_date_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/normal_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/colorMemo"
                    android:textSize="@dimen/text_edit_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/normal_padding"
                    android:orientation="horizontal">

                    <TextView
                        android:clickable="true"
                        android:id="@+id/memo_the_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/note_section"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/normal_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/those_words"
                    android:textColor="@color/colorMemo"
                    android:textSize="@dimen/text_edit_size" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoCorrect|textCapSentences|textLongMessage|textMultiLine"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/note_size"
                        android:hint="@string/here_goes"
                        android:textColorHint="@color/colorPrimaryDark"/>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
